--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -1,6 +1,5 @@
-# SPDX-FileCopyrightText: 2022 Free Software Foundation Europe e.V. <https://fsfe.org>
-#
-# SPDX-License-Identifier: CC0-1.0
+# SPDX-FileCopyrightText: 2023 German Aerospace Center (DLR)
+# SPDX-License-Identifier: Apache-2.0
 
 name: REUSE Compliance Check
 
